# flybird

./: README.md  flybird2.c
ai/: agent.pth  agent_copy.pth  aiflybird.c  aiflybird.py  flybird_display.c  ppo_sync.py  requirements.txt  test_agent.py
ai/flybird_try/: bird_client.py  bird_client_multi.py  bird_server.c  bird_server_multi.c  example-client.py  example-server.py  flybird.c
ai/gym_examples/: __init__.py
ai/gym_examples/envs/: __init__.py  agent_follow.py  aiflybird.c  flybird.py  grid_world.py  snake.py
ai/gym_examples/wrapper/: CartPoleWrapper.py  SankeImageWrapper.py  SnakeImageLikeWrapper.py
flybird_C/: flybird2.c
flybird_cpp/: .gitignore  CMakeLists.txt  README.md
flybird_cpp/src/: bird_control.cpp  bird_control.h  main.cpp  wall_control.cpp  wall_control.h  windows_control.cpp  windows_control.h
